--- a/index.html
+++ b/index.html
@@ -3,12 +3,42 @@
   <head>
     <title>GifTastic</title>
 
+	<!-- css -->
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- jquery -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+	<!-- bootstrap -->
+	<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css' integrity='sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7' crossorigin='anonymous'>
   </head>
-  <body>
+  <body id='bootstrap-overrides'>
+	<div class='container'>
+
+	  	<!-- space for animal-buttons -->
+		<div id='animal-buttons'></div>
+		
+
+		<div class='row'>
+			<div class='col-xs-9'></div>
+			<div class='col-xs-3'>
+					<!-- form to add new animal-button -->
+					<form id='animal-form'>
+				      <label for='animal-input'>Add a Movie Bro</label>
+				      <br>
+				      <input type='text' id='animal-input'>
+				      <br><br>
+				      <!-- Button triggers new animal button to be added -->
+				      <input id="add-animal" type="submit" value="Submit">
+				    </form>
+			</div>
+
+		</div>
+
 	
+
+	</div>
+
+
+
 
     <!-- js -->
     <script src="assets/javascript/giphy.js"></script>
