--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<!-- form to add new animal-button -->
 			<div class='col-xs-3'>
 					<form id='animal-form'>
-				      <label for='animal-input'>Add a Movie Bro</label>
+				      <label for='animal-input'>Add an Animal</label>
 				      <br>
 				      <input type='text' id='animal-input'>
 				      <br><br>
